--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 --- 
 deployment: 
      tasks: 
-          - export DEPLOYPATH=/home/<username>/<public_html>/
+          - export DEPLOYPATH=/home/inkabyteedu/
           - /bin/cp -R public/* $DEPLOYPATH
